--- a/src/components/ServiceTypeForm/ServiceTypeForm.css
+++ b/src/components/ServiceTypeForm/ServiceTypeForm.css
@@ -1,4 +1,4 @@
-.service_type_input::before{
+.service-type-input::before{
     content: "Vehículo";
     margin-right: 4px;
 }
